[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Other/VioletTile.png" type="Texture" id=1]
[ext_resource path="res://World/Resources/TileBody.gd" type="Script" id=2]
[ext_resource path="res://World/Other/Swoosh.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=3]
resource_name = "Animate"
length = 0.7

[sub_resource type="RectangleShape2D" id=4]

[node name="TileBody" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 256.0
margin_bottom = 160.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animate = SubResource( 3 )

[node name="CollisionDetector" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CollisionDetector"]
shape = SubResource( 4 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
